2004-07-04  Murray Cumming  <murrayc@murrayc.com>

	* glom/applciation,cc init_layout(): Do not create the toolbar, 
	because it is not useful for this application.

2004-07-04  Murray Cumming  <murrayc@murrayc.com>

	* glom/navigation/box_db_tables.cc: save_to_document(): Only save 
	something when something has been modified.

2004-07-04  Christophe Merlet  <redfox@redfoxcenter.org>

	* configure.in: Added "fr" (French) to ALL_LINGUAS.

2004-07-04  Murray Cumming  <murrayc@murrayc.com>

	* glom/document/Document_Glom.[h|cc]: Cache all the data in 
	member variables and only deal with the XML DOM when loading and 
	saving, in overrides of load_before() and save_after(). This makes the 
	code nicer and faster.

2004-07-02  Murray Cumming  <murrayc@murrayc.com>

	* Renamed all the ugly on_AddDel_* methods to slightly less ugly 
	on_adddel_* methods.

2004-07-02  Murray Cumming  <murrayc@murrayc.com>

	* Added glom.keys and glom.mime, and added rules in Makefile.am to 
	install them. This is for the old MIME-type registration system, 
	because GNOME 2.6 seems to need both the old and new systems.

0.8.5:

2004-07-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/adddel/adddel_withbuttons.cc: Use a stock 
	Open button instead of one that says Edit. It's nicer.
	* glom/mode_find/box_data_list_find.cc: Make the Find button position 
	sensible.

2004-07-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_find/box_data_list_find.cc fill_from_database(): Save the
	fields into m_Fields, so that get_WhereClause() knows about them. Find 
	in the List view now works.

2004-07-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/flowtablewithfields: Handle field_edited 
	signal of sub-flowtables so that glom responds to editing of a field 
	in a group on the Details view.

2004-07-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data.[h|cc] and derived classes: Change 